# whippet

./: .travis.yml  Readme.md  stack.yaml  whippet.cabal
app/: Errors.hs  Main.hs
elisp/: whippet-mode.el
src/Language/Whippet/: AST.hs  Parser.hs  Typecheck.hs
src/Language/Whippet/AST/: Lenses.hs  Types.hs
src/Language/Whippet/FrontEnd/: AST.hs  Parser.hs
src/Language/Whippet/Frontend/: AST.hs  ASTHelpers.hs  Parser.hs
src/Language/Whippet/Frontend/AST/: HasIdentifier.hs  HasPos.hs  HasSrcPos.hs  Lenses.hs  Types.hs
src/Language/Whippet/Parser/: HasPos.hs  Lenses.hs  Pos.hs  Types.hs
src/Language/Whippet/Typecheck/: CheckM.hs  Errors.hs  Lenses.hs  Types.hs
test/Language/Whippet/: PPrint.hs  ParserSpec.hs
test/Language/Whippet/Frontend/: HasIdentifier.hs  PPrint.hs  ParserSpec.hs
test/Language/Whippet/Frontend/Parser/: ExprSpec.hs  FunctionSpec.hs  ParseUtils.hs  ToplevelSpec.hs  TypeclassSpec.hs  TypesSpec.hs
test/Language/Whippet/Parser/: ExprSpec.hs  FunctionSpec.hs  ParseUtils.hs  ToplevelSpec.hs  TypeclassSpec.hs  TypesSpec.hs
test/Language/Whippet/Typecheck/: ExprSpec.hs
test/resources/: 10.whippet  2.whippet  3.whippet  6.whippet  8.whippet  9.whippet  Bool.whippet  CoerceType.whippet  ConstFunSig.whippet  CtorOptionalPipe.whippet  EmptyInstance.whippet  EmptyModule.whippet  EmptyTypeclass.whippet  FunWithPatternMatching1.whippet  FunWithPatternMatching2.whippet  FunctionTyCtor.whippet  FunctionTyParens.whippet  IdentityFun.whippet  IdentityFunSig.whippet  IdentityFunWithResultType.whippet  IdentityFunWithType.whippet  InstanceWithFunctions.whippet  IntPair.whippet  ListMapFun.whippet  MixedPopulatedModules.whippet  MultilineStringLiteral.whippet  MultipleEmptyModules.whippet  Option.whippet  Pair.whippet  PopulatedModule.whippet  RealisticOption.whippet  RecordOptionalLeadingComma.whippet  SignatureWithAbsType.whippet  SignatureWithFn.whippet  SignatureWithMultipleFns.whippet  StructuralTypeParameterInput.whippet  StructuralTypeParameterOutput.whippet  ToplevelMultilineFunctions.whippet  ToplevelSinglelineFunctions.whippet  ToplevelSinglelineFunctionsBlockBodies.whippet  (+7 more)
