name:                whippet
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/chrisbarrett/whippet#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Barrett
maintainer:          chris.d.barrett@me.com
copyright:           Chris Barrett
category:            Web
build-type:          Simple
data-files:          test/resources/*.whippet
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Language.Whippet.AST
                     , Language.Whippet.Parser
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , parsers
                     , text
                     , trifecta
  default-language:    Haskell2010

executable whippet-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , whippet
  default-language:    Haskell2010

test-suite whippet-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ansi-wl-pprint
                     , hspec
                     , text
                     , trifecta
                     , whippet
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/chrisbarrett/whippet
