name:                whippet
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/chrisbarrett/whippet#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Barrett
maintainer:          chris.d.barrett@me.com
copyright:           Chris Barrett
category:            Web
build-type:          Simple
data-files:          test/resources/*.whippet
cabal-version:       >=1.10


library
  exposed-modules:     Language.Whippet.Parser
                     , Language.Whippet.Parser.Lenses
                     , Language.Whippet.Parser.HasPos
                     , Language.Whippet.Parser.Types
                     , Language.Whippet.Typecheck
                     , Language.Whippet.Typecheck.Errors
                     , Language.Whippet.Typecheck.Lenses
                     , Language.Whippet.Typecheck.Types

  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , lens
                     , mtl
                     , parsers
                     , scientific
                     , semigroups
                     , text
                     , trifecta

  hs-source-dirs:      src
  default-language:    Haskell2010


executable whippet
  build-depends:       base
                     , ansi-wl-pprint
                     , optparse-applicative
                     , trifecta
                     , whippet

  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010


test-suite whippet-test
  build-depends:       base
                     , ansi-wl-pprint
                     , bytestring
                     , containers
                     , hspec
                     , utf8-string
                     , filepath
                     , lens
                     , mtl
                     , semigroups
                     , text
                     , trifecta
                     , whippet


  other-modules:       Language.Whippet.PPrint
                     , Language.Whippet.Parser.ExprSpec
                     , Language.Whippet.Parser.FunctionSpec
                     , Language.Whippet.Parser.ParseUtils
                     , Language.Whippet.Parser.ToplevelSpec
                     , Language.Whippet.Parser.TypeclassSpec
                     , Language.Whippet.Parser.TypesSpec
                     , Paths_whippet

  hs-source-dirs:      test
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/chrisbarrett/whippet
